infra/rancher/ing.yaml
# helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
# helm install rancher rancher-latest/rancher --namespace cattle-system --create-namespace --set hostname=... --set bootstrapPassword=...

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cattle-ingress
  namespace: cattle-system
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: rancher.wavecat.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher
            port:
              name: http
  tls:
  - hosts:
    - rancher.wavecat.net
    secretName: rancher.wavecat.net
